@@ -3,6 +3,11 @@ using Terraria.ID;
 using Terraria.ModLoader;
 using Microsoft.Xna.Framework;
 using Roguelike.Common.Utils;
+using Microsoft.Xna.Framework.Graphics;
+using Terraria.DataStructures;
+using System;
+using System.Collections.Generic;
+using Roguelike.Common.Global;
 
 namespace Roguelike.Common.Mode.RoguelikeMode.RoguelikeChange.ItemOverhaul.ItemOverhaul.Specific;
 internal class Roguelike_Chik : GlobalItem {
@@ -12,15 +17,26 @@ internal class Roguelike_Chik : GlobalItem {
 	public override void SetDefaults(Item entity) {
 		entity.damage = 42;
 	}
+	public override void ModifyTooltips(Item item, List<TooltipLine> tooltips) {
+		ModUtils.AddTooltip(ref tooltips, new(Mod, "", ModUtils.LocalizationText("RoguelikeRework", item.Name)));
+	}
 }
 public class Roguelike_Chik_GlobalProjectile : GlobalProjectile {
 	public override bool AppliesToEntity(Projectile entity, bool lateInstantiation) {
 		return entity.type == ProjectileID.Chik;
 	}
-	public override void PostAI(Projectile projectile) {
-		if (Main.rand.NextBool(10)) {
-			Projectile.NewProjectile(projectile.GetSource_FromAI(), projectile.Center, Main.rand.NextVector2CircularEdge(5, 5) * Main.rand.NextFloat(.2f, 1f), ProjectileID.CrystalShard, projectile.damage / 3 + 1, 1, projectile.owner);
+	public override bool PreAI(Projectile projectile) {
+		if (Main.player[projectile.owner].ownedProjectileCounts[ModContent.ProjectileType<Roguelike_Chik_ModProjectile>()] < 1) {
+			Projectile.NewProjectile(projectile.GetSource_FromAI(), projectile.Center, Vector2.Zero, ModContent.ProjectileType<Roguelike_Chik_ModProjectile>(), projectile.damage, 0, projectile.whoAmI);
 		}
+		return base.PreAI(projectile);
+	}
+	public override void PostAI(Projectile projectile) {
+		Projectile proj = Projectile.NewProjectileDirect(projectile.GetSource_FromAI(), projectile.Center + Main.rand.NextVector2Circular(projectile.width, projectile.height), Main.rand.NextVector2CircularEdge(1, 1), ProjectileID.CrystalShard, projectile.damage / 3 + 1, 1, projectile.owner);
+		proj.penetrate = -1;
+		proj.maxPenetrate = -1;
+		proj.usesIDStaticNPCImmunity = true;
+		proj.idStaticNPCHitCooldown = 20;
 	}
 }
 public class Roguelike_CHik_ModPlayer : ModPlayer {
@@ -42,5 +58,42 @@ public class Roguelike_CHik_ModPlayer : ModPlayer {
 				HitCounter = 0;
 			}
 		}
+	}
+}
+public class Roguelike_Chik_ModProjectile : ModProjectile {
+	public override string Texture => ModUtils.GetVanillaTexture<Projectile>(ProjectileID.Chik);
+	public override void SetStaticDefaults() {
+		ProjectileID.Sets.TrailCacheLength[Type] = 10;
+		ProjectileID.Sets.TrailingMode[Type] = 0;
+	}
+	public override void SetDefaults() {
+		Projectile.CloneDefaults(ProjectileID.Chik);
+		Projectile.aiStyle = -1;
+		Projectile.tileCollide = false;
+		Projectile.extraUpdates = 2;
+	}
+	public int Owner { get => (int)Projectile.ai[0]; set => Projectile.ai[0] = value; }
+	public override void AI() {
+		if (Owner < 0 || Owner >= Main.maxProjectiles) {
+			Projectile.Kill();
+			return;
+		}
+		Projectile parentProjectile = Main.projectile[Owner];
+		if (!parentProjectile.active || parentProjectile.timeLeft < 0) {
+			Projectile.Kill();
+			return;
+		}
+		Projectile.timeLeft = 2;
+		Vector2 positionNeedToBe = parentProjectile.Center - Projectile.Center + Vector2.One.RotatedBy(MathHelper.ToRadians(++Projectile.ai[1] * 3)) * 50;
+		Vector2 velocity = positionNeedToBe.SafeNormalize(Vector2.Zero);
+		Projectile.velocity += velocity;
+		Projectile.velocity = Projectile.velocity.LimitedVelocity(positionNeedToBe.Length() / 8f);
+	}
+	public override bool PreDraw(ref Color lightColor) {
+		Projectile.DrawTrail(lightColor);
+		Projectile.ProjectileDefaultDrawInfo(out Texture2D texture, out Vector2 origin);
+		Vector2 drawPos = Projectile.Center + Main.screenPosition - origin;
+		Main.EntitySpriteDraw(texture, drawPos, null, lightColor, 0, origin, 1f, SpriteEffects.None);
+		return false;
 	}
 }
