@@ -8,7 +8,6 @@ internal class ScrollOfProtection : ModItem {
 	public override void SetStaticDefaults() {
 		ModItemLib.LootboxPotion.Add(Item);
 	}
-	public override string Texture => ModTexture.MissingTexture_Default;
 	public override void SetDefaults() {
 		Item.BossRushDefaultPotion(32, 32, ModContent.BuffType<ProtectionSpell>(), ModUtils.ToSecond(20));
 	}
