@@ -9,7 +9,6 @@ internal class ScrollOfTeleportation : ModItem {
 	public override void SetStaticDefaults() {
 		ModItemLib.LootboxPotion.Add(Item);
 	}
-	public override string Texture => ModTexture.MissingTexture_Default;
 	public override void SetDefaults() {
 		Item.Item_DefaultToConsume(32, 32);
 		Item.maxStack = 99;
