@@ -9,7 +9,6 @@ namespace Roguelike.Contents.Items.Consumable.Scroll {
 		public override void SetStaticDefaults() {
 			ModItemLib.LootboxPotion.Add(Item);
 		}
-		public override string Texture => ModTexture.MissingTexture_Default;
 		public override void SetDefaults() {
 			Item.BossRushDefaultPotion(32, 32, ModContent.BuffType<StrikeSpell>(), ModUtils.ToMinute(1));
 		}
