@@ -95,3 +95,9 @@ PlatinumBow:
 	While air born, shooting will cause player to fall down without taking fall damage
 	Alt-click to shoot out a single arrow
 	'''
+Chik:
+	'''
+	The yoyo leave a trail of crystal.
+	After 12 yoyo hits, the next 3 hit shoot out ring of crystal
+	A illusion yoyo follow the main yoyo.
+	'''
